Modernize main source code to use current Java idioms
- Use pattern matching with instanceof (Java 14+)
- Replace Arrays.asList() with List.of()
- Use Stream.toList() instead of collect(Collectors.toList())

These changes demonstrate modern Java practices in the example code.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>